# cpp-array

./: CMakeLists.txt  Makefile  ProjectHome.md  README
array/: CMakeLists.txt  array.hpp  array.i  array_fwd.hpp  array_impl.hpp  blas.hpp  blas_impl.hpp  blas_lapack.hpp  cblas_impl.hpp  cublas_impl.hpp  expr.hpp  functions.hpp  lapack_impl.hpp  main.cpp  return_type.hpp  timer.hpp  typelist.hpp
array/cuda/: exception.h  helper_functions.h  helper_image.h  helper_timer.h
cmake/: Doxyfile.in  FindCBLAS.cmake  FindCLAPACK.cmake  LaTeX_preamble.sty  array-config.hpp.in  cpp-array-config.cmake.in
examples/: CMakeLists.txt  cuda_dot_performance.cpp  cuda_gemm_performance.cpp  cuda_gemv_performance.cpp  cuda_performance.cpp  dot_performance.cpp  gemm_performance.cpp  gemv_performance.cpp  performance.cpp
tests/: CMakeLists.txt  script.sh  test000.cpp  test000.verified  test001.cpp  test001.verified  test002.cpp  test002.verified  test003.cpp  test003.verified  test004.cpp  test004.verified  test_access.cpp  test_access.verified  test_algebraic_cast.cpp  test_algebraic_cast.verified  test_blas.cpp  test_blas.verified  test_constructors.cpp  test_constructors.verified  test_functions.cpp  test_functions.verified  test_iterators.cpp  test_iterators.verified  test_lapack.cpp  test_lapack.verified  test_norms.cpp  test_norms.verified
